--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :kind_id %><br>
-    <%= f.text_field :kind_id %>
+    <%= collection_select(:contact, :kind_id, Kind.all, :id, :description)%>
   </div>
   <div class="field">
     <%= f.label :rmk %><br>
