--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,4 +10,7 @@
     <li>
         <%= link_to 'Endereços', addresses_path %>
     </li>
+    <li>
+        <%= link_to 'Telefones', phones_path %>
+    </li>
 </ul>
