--- a/app/views/phones/index.html.erb
+++ b/app/views/phones/index.html.erb
@@ -15,7 +15,7 @@
     <% @phones.each do |phone| %>
       <tr>
         <td><%= phone.phone %></td>
-        <td><%= phone.contact %></td>
+        <td><%= phone.contact.name %></td>
         <td><%= link_to 'Show', phone %></td>
         <td><%= link_to 'Edit', edit_phone_path(phone) %></td>
         <td><%= link_to 'Destroy', phone, method: :delete, data: { confirm: 'Are you sure?' } %></td>
