--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :stret %><br>
-    <%= f.text_field :stret %>
+    <%= f.label :street %><br>
+    <%= f.text_field :street %>
   </div>
   <div class="field">
     <%= f.label :city %><br>
