--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Stret:</strong>
-  <%= @address.stret %>
+  <strong>Street:</strong>
+  <%= @address.street %>
 </p>
 
 <p>
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Contact:</strong>
-  <%= @address.contact %>
+  <%= @address.contact.name %>
 </p>
 
 <%= link_to 'Edit', edit_address_path(@address) %> |
