--- a/app/views/phones/show.html.erb
+++ b/app/views/phones/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Contact:</strong>
-  <%= @phone.contact %>
+  <%= @phone.contact.name %>
 </p>
 
 <%= link_to 'Edit', edit_phone_path(@phone) %> |
