Includes fields_for

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -23,6 +23,23 @@
     <%= f.label :kind_id %><br>
     <%= collection_select(:contact, :kind_id, Kind.all, :id, :description)%>
   </div>
+
+  <!-- Nested attributes group (address) -->
+  <%= f.fields_for :address do |address_fields| %>
+    <div class="field">
+      <%= address_fields.label :street %><br>
+      <%= address_fields.text_field :street %>
+    </div>
+    <div class="field">
+      <%= address_fields.label :city %><br>
+      <%= address_fields.text_field :city %>
+    </div>
+    <div class="field">
+      <%= address_fields.label :state %><br>
+      <%= address_fields.text_field :state %>
+    </div>
+  <% end %>
+
   <div class="field">
     <%= f.label :rmk %><br>
     <%= f.text_area :rmk %>
